Fix collapsing transition bug

--- a/assets/stylesheets/components/collapse_group.scss
+++ b/assets/stylesheets/components/collapse_group.scss
@@ -66,7 +66,8 @@
     }
   }
 
-  .collapse > div {
+  .collapse > div,
+  .collapsing > div {
     margin-left: 2rem;
     margin-right: 2rem;
 
